Bug 1418472 - Flush line-breaks when encountering a Placeholder for an absolutely-positioned frame. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D32023

--HG--
extra : moz-landing-system : lando